...
        android:fontFamily="sans-serif-black"
        android:onClick="handleCancelClick"
        android:text="@string/cs6300_team0009_joffer"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle2"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:onClick="handleCancelClick"
...
